feat: Show poll for display during event (#57)
* Show poll instance [WIP]
* Improve CDI-setup in web module
* Change path for poll display
* Change path to JSP file
* Better test data
* Change page title
* Add integration test for displaying poll & instance
* Prepare for testing infra layer with TestContainers
* Introduce generic Result class with tests
* Setup mutation testing
* Don't shadow instance variable
* Improve readability
* Make mutation testing format configurable
* Simplify mutation testing configuration
* Prepare PostgreSQL service container and ensure it's correctly populated
* Dynamically migrate database schema
* Split 'domain' module in packages
* Replace in-memory repository with JPA implementation
* Properly format SQL files
* Add a few more unit tests
* Ignore warning about unused parameter
* Activate Maven Failsafe Plugin
* Remove unused method
* Test correct class
* Include coverage of integration tests
* Add actual integration test to Infrastructure module
* Improve test coverage of TransactionSupport class
* Do not measure coverage on JPA entities
* Do not suggest to turn this into a Record
* Extract nested try to separate method